Add attribution hints to publishTriggeringHint()
Bug: 434644900
Fixes: 465499163
Test: atest PersonalContextTests
Flag: android.service.personalcontext.enable_personal_context_service
Change-Id: I1fe4d714aa7cee2007497079443e26556a6a6964